<resources>
    <string name="cancel">Cancel</string>
    <string name="copy">Copy</string>
    <string name="copyUrl">Copy URL</string>
    <string name="cut">Cut</string>
    <string name="defaultVoiceMailAlphaTag">Voicemail</string>
    <string name="defaultMsisdnAlphaTag">MSISDN1</string>
    <string name="emptyPhoneNumber">(No phone number)</string>
    <string name="httpErrorBadUrl">"Couldn't open the page because the URL is invalid."</string>
    <string name="httpErrorUnsupportedScheme">"The protocol isn't supported."</string>
    <string name="no">Cancel</string>
    <string name="ok">OK</string>
    <string name="paste">Paste</string>
    <string name="search_go">Search</string>
    <string name="selectAll">Select all</string>
    <string name="unknownName">(Unknown)</string>
    <string name="untitled">&lt;Untitled></string>
    <string name="VideoView_error_button">OK</string>
    <string name="VideoView_error_text_unknown">"Can't play this video."</string>
    <string name="VideoView_error_title">Video problem</string>
    <string name="yes">OK</string>
    <string name="dialog_alert_title">Attention</string>
    <string name="VideoView_error_text_invalid_progressive_playback">"This video isn't valid for streaming to this device."</string>
    <string name="selectTextMode">Select text</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="config_ethernet_iface_regex">eth\\d</string>
    <string name="config_tether_apndata" />
    <string name="config_wifi_p2p_device_type">10-0050F204-5</string>
    <string name="widget_default_package_name" />
    <string name="widget_default_class_name" />
    <string name="default_wallpaper_component">@null</string>
    <string name="config_networkLocationProviderPackageName">com.qualcomm.location</string>
    <string name="config_fusedLocationProviderPackageName">com.qualcomm.location</string>
    <string name="config_geocoderProviderPackageName">@null</string>
    <string name="config_geofenceProviderPackageName">@null</string>
    <string name="config_datause_iface">rmnet0</string>
    <string name="default_sms_application">com.android.mms</string>
    <string name="config_default_dns_server">8.8.8.8</string>
    <string name="mobile_provisioning_apn" />
    <string name="mobile_provisioning_url" />
    <string name="mobile_redirected_provisioning_url">http://google.com</string>
    <string name="gsm_alphabet_default_charset" />
    <string name="db_default_journal_mode">PERSIST</string>
    <string name="db_default_sync_mode">FULL</string>
    <string name="db_wal_sync_mode">FULL</string>
    <string name="config_useragentprofile_url" />
    <string name="config_mms_user_agent">Android-Mms/2.0</string>
    <string name="config_mms_user_agent_profile_url">http://www.google.com/oha/rdf/ua-profile-kila.xml</string>
    <string name="config_isoImagePath" />
    <string name="config_ntpServer">pool.ntp.org</string>
    <string name="config_wimaxServiceJarLocation" />
    <string name="config_wimaxNativeLibLocation" />
    <string name="config_wimaxManagerClassname" />
    <string name="config_wimaxServiceClassname" />
    <string name="config_wimaxStateTrackerClassname" />
    <string name="config_dreamsDefaultComponent">com.google.android.deskclock/com.android.deskclock.Screensaver</string>
    <string name="config_chooseAccountActivity">android/android.accounts.ChooseAccountActivity</string>
    <string name="config_chooseTypeAndAccountActivity">android/android.accounts.ChooseTypeAndAccountActivity</string>
    <string name="config_customResolverActivity" />
    <string name="config_appsAuthorizedForSharedAccounts">;com.android.settings;</string>
    <string name="numeric_date_template" formatted="false">%s/%s/%s</string>
    <string name="month_day_year" formatted="false">%B %-e, %Y</string>
    <string name="time_of_day" formatted="false">%-l:%M:%S %p</string>
    <string name="date_and_time" formatted="false">%b %-e, %Y, %-l:%M:%S %p</string>
    <string name="date_time">%1$s, %2$s</string>
    <string name="common_name_prefixes" />
    <string name="common_name_suffixes" />
    <string name="common_last_name_prefixes" />
    <string name="common_name_conjunctions" />
    <string name="default_text_encoding">Latin-1</string>
    <string name="lock_pattern_view_aspect">square</string>
    <string name="icu_abbrev_wday_month_day_no_year">eeeMMMMd</string>
    <string name="system_ui_date_pattern">@string/icu_abbrev_wday_month_day_no_year</string>
    <string name="byteShort">B</string>
    <string name="kilobyteShort">KB</string>
    <string name="megabyteShort">MB</string>
    <string name="gigabyteShort">GB</string>
    <string name="terabyteShort">TB</string>
    <string name="petabyteShort">PB</string>
    <string name="fileSizeSuffix">%1$s%2$s</string>
    <string name="ellipsis">…</string>
    <string name="ellipsis_two_dots">‥</string>
    <string name="mmiError">Connection problem or invalid MMI code.</string>
    <string name="mmiFdnError">Operation is restricted to fixed dialing numbers only.</string>
    <string name="serviceEnabled">Service was enabled.</string>
    <string name="serviceEnabledFor">Service was enabled for:</string>
    <string name="serviceDisabled">Service has been disabled.</string>
    <string name="serviceRegistered">Registration was successful.</string>
    <string name="serviceErased">Erasure was successful.</string>
    <string name="passwordIncorrect">Incorrect password.</string>
    <string name="mmiComplete">MMI complete.</string>
    <string name="badPin">"The old PIN you typed isn't correct."</string>
    <string name="badPuk">"The PUK you typed isn't correct."</string>
    <string name="mismatchPin">"The PINs you typed don't match."</string>
    <string name="invalidPin">Type a PIN that is 4 to 8 numbers.</string>
    <string name="invalidPuk">Type a PUK that is 8 numbers or longer.</string>
    <string name="needPuk">Your SIM card is PUK-locked. Type the PUK code to unlock it.</string>
    <string name="needPuk2">Type PUK2 to unblock SIM card.</string>
    <string name="imei">IMEI</string>
    <string name="meid">MEID</string>
    <string name="ClipMmi">Incoming Caller ID</string>
    <string name="ClirMmi">Outgoing Caller ID</string>
    <string name="CfMmi">Call forwarding</string>
    <string name="CwMmi">Call waiting</string>
    <string name="BaMmi">Call barring</string>
    <string name="PwdMmi">Password change</string>
    <string name="PinMmi">PIN change</string>
    <string name="CnipMmi">Calling number present</string>
    <string name="CnirMmi">Calling number restricted</string>
    <string name="ThreeWCMmi">Three way calling</string>
    <string name="RuacMmi">Rejection of undesired annoying calls</string>
    <string name="CndMmi">Calling number delivery</string>
    <string name="DndMmi">Do not disturb</string>
    <string name="CLIRDefaultOnNextCallOn">Caller ID defaults to restricted. Next call: Restricted</string>
    <string name="CLIRDefaultOnNextCallOff">Caller ID defaults to restricted. Next call: Not restricted</string>
    <string name="CLIRDefaultOffNextCallOn">Caller ID defaults to not restricted. Next call: Restricted</string>
    <string name="CLIRDefaultOffNextCallOff">Caller ID defaults to not restricted. Next call: Not restricted</string>
    <string name="serviceNotProvisioned">Service not provisioned.</string>
    <string name="CLIRPermanent">"You can't change the caller ID setting."</string>
    <string name="RestrictedChangedTitle">Restricted access changed</string>
    <string name="RestrictedOnData">Data service is blocked.</string>
    <string name="RestrictedOnEmergency">Emergency service is blocked.</string>
    <string name="RestrictedOnNormal">Voice service is blocked.</string>
    <string name="RestrictedOnAllVoice">All voice services are blocked.</string>
    <string name="RestrictedOnSms">SMS service is blocked.</string>
    <string name="RestrictedOnVoiceData">Voice/data services are blocked.</string>
    <string name="RestrictedOnVoiceSms">Voice/SMS services are blocked.</string>
    <string name="RestrictedOnAll">All voice/data/SMS services are blocked.</string>
    <string name="serviceClassVoice">Voice</string>
    <string name="serviceClassData">Data</string>
    <string name="serviceClassFAX">FAX</string>
    <string name="serviceClassSMS">SMS</string>
    <string name="serviceClassDataAsync">Async</string>
    <string name="serviceClassDataSync">Sync</string>
    <string name="serviceClassPacket">Packet</string>
    <string name="serviceClassPAD">PAD</string>
    <string name="roamingText0">Roaming Indicator On</string>
    <string name="roamingText1">Roaming Indicator Off</string>
    <string name="roamingText2">Roaming Indicator Flashing</string>
    <string name="roamingText3">Out of Neighborhood</string>
    <string name="roamingText4">Out of Building</string>
    <string name="roamingText5">Roaming - Preferred System</string>
    <string name="roamingText6">Roaming - Available System</string>
    <string name="roamingText7">Roaming - Alliance Partner</string>
    <string name="roamingText8">Roaming - Premium Partner</string>
    <string name="roamingText9">Roaming - Full Service Functionality</string>
    <string name="roamingText10">Roaming - Partial Service Functionality</string>
    <string name="roamingText11">Roaming Banner On</string>
    <string name="roamingText12">Roaming Banner Off</string>
    <string name="roamingTextSearching">Searching for Service</string>
    <string name="cfTemplateNotForwarded">{0}: Not forwarded</string>
    <string name="cfTemplateForwarded">{0}: {1}</string>
    <string name="cfTemplateForwardedTime">{0}: {1} after {2} seconds</string>
    <string name="cfTemplateRegistered">{0}: Not forwarded</string>
    <string name="cfTemplateRegisteredTime">{0}: Not forwarded</string>
    <string name="fcComplete">Feature code complete.</string>
    <string name="fcError">Connection problem or invalid feature code.</string>
    <string name="httpErrorOk">OK</string>
    <string name="httpError">There was a network error.</string>
    <string name="httpErrorLookup">"Couldn't find the URL."</string>
    <string name="httpErrorUnsupportedAuthScheme">"The site authentication scheme isn't supported."</string>
    <string name="httpErrorAuth">"Couldn't authenticate."</string>
    <string name="httpErrorProxyAuth">Authentication via the proxy server was unsuccessful.</string>
    <string name="httpErrorConnect">"Couldn't connect to the server."</string>
    <string name="httpErrorIO">"Couldn't communicate with the server. Try again later."</string>
    <string name="httpErrorTimeout">The connection to the server timed out.</string>
    <string name="httpErrorRedirectLoop">The page contains too many server redirects.</string>
    <string name="httpErrorFailedSslHandshake">"Couldn't establish a secure connection."</string>
    <string name="httpErrorFile">"Couldn't access the file."</string>
    <string name="httpErrorFileNotFound">"Couldn't find the requested file."</string>
    <string name="httpErrorTooManyRequests">Too many requests are being processed. Try again later.</string>
    <string name="notification_title">Signin error for %1$s</string>
    <string name="contentServiceSync">Sync</string>
    <string name="select_input_method">Choose input method</string>
    <string name="use_physical_keyboard">Physical keyboard</string>
    <string name="hardware">Hardware</string>
    <string name="password_hint">Login</string>
    <string name="password_cancel">Clear</string>
    <string name="mibao_hint">Please input power password:</string>
    <string name="find_password_text">Find password</string>
    <string name="yl_mute_mode">Mute</string>
    <string name="yl_airplane_mode">Airplane Mode</string>
    <string name="yl_flashlight_mode">Flashlight</string>
    <string name="yl_vibrate_mode">Vibrate</string>
</resources>