<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:gravity="center_vertical" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="63.5dip" android:layout_marginStart="16.0dip" android:layout_marginEnd="16.0dip">
        <TextView android:textSize="14.0sp" android:textColor="@color/yl_alert_dialog_title_text_color" android:ellipsize="marquee" android:gravity="center" android:id="@id/alertTitle" android:focusable="true" android:focusableInTouchMode="true" android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="@string/select_input_method" android:singleLine="true" android:marqueeRepeatLimit="marquee_forever" />
    </LinearLayout>
    <LinearLayout android:orientation="vertical" android:id="@id/hard_keyboard_section" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <View android:background="@color/holo_blue_light" android:layout_width="fill_parent" android:layout_height="2.0dip" />
        <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <LinearLayout android:ellipsize="marquee" android:gravity="center_vertical" android:orientation="vertical" android:background="?selectableItemBackground" android:paddingTop="5.0dip" android:paddingBottom="5.0dip" android:layout_width="0.0dip" android:layout_height="wrap_content" android:minHeight="?listPreferredItemHeightSmall" android:layout_weight="1.0" android:paddingStart="16.0dip" android:paddingEnd="0.0dip">
                <TextView android:textAppearance="?textAppearanceMedium" android:textColor="@color/primary_text_holo_light" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/hardware" android:singleLine="true" />
                <TextView android:textAppearance="?textAppearanceSmall" android:textColor="@color/dim_foreground_dark" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/use_physical_keyboard" android:singleLine="true" />
            </LinearLayout>
            <Switch android:layout_gravity="center_vertical" android:id="@id/hard_keyboard_switch" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginEnd="12.0dip" />
        </LinearLayout>
    </LinearLayout>
    <View android:id="@id/titleDivider" android:background="@drawable/yl_list_divider_holo_light" android:layout_width="fill_parent" android:layout_height="0.5dip" />
</LinearLayout>