<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:minHeight="?listPreferredItemHeight"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:id="@id/option1" android:background="?actionBarItemBackground" android:focusable="true" android:layout_width="64.0dip" android:layout_height="fill_parent" android:contentDescription="@string/yl_flashlight_mode">
        <ImageView android:layout_gravity="center" android:id="@id/scene_image1" android:duplicateParentState="true" android:layout_width="48.0dip" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:layout_marginBottom="1.0dip" android:src="@drawable/yl_ic_flashlight_black" android:scaleType="center" android:layout_marginStart="8.0dip" android:layout_marginEnd="8.0dip" />
        <TextView android:textSize="12.0dip" android:textColor="#ff7b7b7b" android:gravity="center" android:layout_gravity="center" android:id="@id/scene_text1" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="1.0dip" android:layout_marginBottom="0.0dip" android:text="@string/yl_flashlight_mode" android:layout_marginStart="8.0dip" android:layout_marginEnd="8.0dip" />
    </LinearLayout>
    <View android:visibility="invisible" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_weight="1.0" />
    <LinearLayout android:orientation="vertical" android:id="@id/option2" android:background="?actionBarItemBackground" android:focusable="true" android:layout_width="64.0dip" android:layout_height="fill_parent" android:contentDescription="@string/yl_airplane_mode">
        <ImageView android:layout_gravity="center" android:id="@id/scene_image2" android:duplicateParentState="true" android:layout_width="48.0dip" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:layout_marginBottom="1.0dip" android:src="@drawable/yl_ic_airplane_black" android:scaleType="center" android:layout_marginStart="8.0dip" android:layout_marginEnd="8.0dip" />
        <TextView android:textSize="12.0dip" android:textColor="#ff7b7b7b" android:gravity="center" android:layout_gravity="center" android:id="@id/scene_text2" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="1.0dip" android:layout_marginBottom="0.0dip" android:text="@string/yl_airplane_mode" android:layout_marginStart="8.0dip" android:layout_marginEnd="8.0dip" />
    </LinearLayout>
    <View android:visibility="invisible" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_weight="1.0" />
    <LinearLayout android:orientation="vertical" android:id="@id/option3" android:background="?actionBarItemBackground" android:focusable="true" android:layout_width="64.0dip" android:layout_height="fill_parent" android:contentDescription="@string/yl_mute_mode">
        <ImageView android:layout_gravity="center" android:id="@id/scene_image3" android:duplicateParentState="true" android:layout_width="48.0dip" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:layout_marginBottom="1.0dip" android:src="@drawable/yl_ic_mute_black" android:scaleType="center" android:layout_marginStart="8.0dip" android:layout_marginEnd="8.0dip" />
        <TextView android:textSize="12.0dip" android:textColor="#ff7b7b7b" android:gravity="center" android:layout_gravity="center" android:id="@id/scene_text3" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="1.0dip" android:layout_marginBottom="0.0dip" android:text="@string/yl_mute_mode" android:layout_marginStart="8.0dip" android:layout_marginEnd="8.0dip" />
    </LinearLayout>
    <View android:visibility="invisible" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_weight="1.0" />
    <LinearLayout android:orientation="vertical" android:id="@id/option4" android:background="?actionBarItemBackground" android:focusable="true" android:layout_width="64.0dip" android:layout_height="fill_parent" android:contentDescription="@string/yl_vibrate_mode">
        <ImageView android:layout_gravity="center" android:id="@id/scene_image4" android:duplicateParentState="true" android:layout_width="48.0dip" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:layout_marginBottom="1.0dip" android:src="@drawable/yl_ic_vibrate_black" android:scaleType="center" android:layout_marginStart="8.0dip" android:layout_marginEnd="8.0dip" />
        <TextView android:textSize="12.0dip" android:textColor="#ff7b7b7b" android:gravity="center" android:layout_gravity="center" android:id="@id/scene_text4" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="1.0dip" android:layout_marginBottom="0.0dip" android:text="@string/yl_vibrate_mode" android:layout_marginStart="8.0dip" android:layout_marginEnd="8.0dip" />
    </LinearLayout>
</LinearLayout>