<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@id/yulong_login_mibao_id" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tabunlock="http://schemas.android.com/apk/res/com.android.tabunlock">
    <ImageView android:id="@id/mibao_title_background" android:background="@drawable/fangdao_title_back" android:layout_width="fill_parent" android:layout_height="wrap_content" />
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="11.0dip">
        <ImageView android:layout_gravity="center_vertical" android:id="@id/mibao_arrows" android:background="@drawable/yl_fangdao_arrows" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="2.0dip" android:layout_marginRight="2.0dip" />
        <TextView android:textSize="20.0sp" android:textStyle="normal" android:textColor="#ffffffff" android:layout_gravity="center_vertical" android:id="@id/login_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/mibao_hint" />
    </LinearLayout>
    <TextView android:textStyle="bold" android:textColor="#ffff0000" android:id="@id/login_password_error" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="15.0dip" android:layout_marginTop="70.0dip" />
    <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:id="@id/login_password_input_text" android:background="@drawable/fangdao_editbg" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="12.0dip" android:layout_marginTop="102.0dip" android:layout_marginRight="12.0dip">
        <TextView android:textAppearance="?textAppearanceLargeInverse" android:textStyle="bold" android:id="@id/new_password_text" android:layout_width="0.0dip" android:layout_height="wrap_content" android:maxLines="1" android:layout_weight="1.0" android:inputType="textPassword" />
        <ImageButton android:id="@id/backspace" android:background="@drawable/btn_delete_background" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="-3.0dip" android:layout_marginBottom="-3.0dip" />
    </LinearLayout>
    <TextView android:textStyle="bold" android:textColor="#ff000000" android:id="@id/find_password" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:layout_marginRight="12.0dip" android:text="@string/find_password_text" android:layout_below="@id/login_password_input_text" android:layout_alignParentRight="true" />
    <LinearLayout android:orientation="vertical" android:background="@drawable/yl_input_bg" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="390.0dip">
        <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="55.0dip" android:layout_marginLeft="0.0dip" android:layout_marginRight="0.0dip">
            <Button android:textAppearance="?textAppearanceLarge" android:textStyle="bold" android:textColor="#ff000000" android:id="@id/one" android:background="@drawable/btn_keyguard_background" android:layout_width="0.0sp" android:layout_height="fill_parent" android:layout_marginLeft="0.0dip" android:layout_marginRight="1.0dip" android:layout_weight="1.0" />
            <Button android:textAppearance="?textAppearanceLarge" android:textStyle="bold" android:textColor="#ff000000" android:id="@id/two" android:background="@drawable/btn_keyguard_background" android:layout_width="0.0sp" android:layout_height="fill_parent" android:layout_marginLeft="1.0dip" android:layout_marginRight="1.0dip" android:layout_weight="1.0" />
            <Button android:textAppearance="?textAppearanceLarge" android:textStyle="bold" android:textColor="#ff000000" android:id="@id/three" android:background="@drawable/btn_keyguard_background" android:layout_width="0.0sp" android:layout_height="fill_parent" android:layout_marginLeft="1.0dip" android:layout_marginRight="0.0dip" android:layout_weight="1.0" />
        </LinearLayout>
        <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="55.0dip" android:layout_marginLeft="0.0dip" android:layout_marginRight="0.0dip">
            <Button android:textAppearance="?textAppearanceLarge" android:textStyle="bold" android:textColor="#ff000000" android:id="@id/four" android:background="@drawable/btn_keyguard_background" android:layout_width="0.0sp" android:layout_height="fill_parent" android:layout_marginLeft="0.0dip" android:layout_marginRight="1.0dip" android:layout_weight="1.0" />
            <Button android:textAppearance="?textAppearanceLarge" android:textStyle="bold" android:textColor="#ff000000" android:id="@id/five" android:background="@drawable/btn_keyguard_background" android:layout_width="0.0sp" android:layout_height="fill_parent" android:layout_marginLeft="1.0dip" android:layout_marginRight="1.0dip" android:layout_weight="1.0" />
            <Button android:textAppearance="?textAppearanceLarge" android:textStyle="bold" android:textColor="#ff000000" android:id="@id/six" android:background="@drawable/btn_keyguard_background" android:layout_width="0.0sp" android:layout_height="fill_parent" android:layout_marginLeft="1.0dip" android:layout_marginRight="0.0dip" android:layout_weight="1.0" />
        </LinearLayout>
        <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="55.0dip" android:layout_marginLeft="0.0dip" android:layout_marginRight="0.0dip">
            <Button android:textAppearance="?textAppearanceLarge" android:textStyle="bold" android:textColor="#ff000000" android:id="@id/seven" android:background="@drawable/btn_keyguard_background" android:layout_width="0.0sp" android:layout_height="fill_parent" android:layout_marginLeft="0.0dip" android:layout_marginRight="1.0dip" android:layout_weight="1.0" />
            <Button android:textAppearance="?textAppearanceLarge" android:textStyle="bold" android:textColor="#ff000000" android:id="@id/eight" android:background="@drawable/btn_keyguard_background" android:layout_width="0.0sp" android:layout_height="fill_parent" android:layout_marginLeft="1.0dip" android:layout_marginRight="1.0dip" android:layout_weight="1.0" />
            <Button android:textAppearance="?textAppearanceLarge" android:textStyle="bold" android:textColor="#ff000000" android:id="@id/nine" android:background="@drawable/btn_keyguard_background" android:layout_width="0.0sp" android:layout_height="fill_parent" android:layout_marginLeft="1.0dip" android:layout_marginRight="0.0dip" android:layout_weight="1.0" />
        </LinearLayout>
        <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="55.0dip" android:layout_marginLeft="0.0dip" android:layout_marginRight="0.0dip">
            <Button android:textAppearance="?textAppearanceMedium" android:textStyle="bold" android:textColor="#ff000000" android:id="@id/password_hint_button" android:background="@drawable/btn_land_keyguard_background" android:layout_width="0.0sp" android:layout_height="fill_parent" android:layout_marginLeft="0.0dip" android:layout_marginRight="1.0dip" android:text="@string/password_hint" android:layout_weight="1.0" />
            <Button android:textAppearance="?textAppearanceLarge" android:textStyle="bold" android:textColor="#ff000000" android:id="@id/zero" android:background="@drawable/btn_keyguard_background" android:layout_width="0.0sp" android:layout_height="fill_parent" android:layout_marginLeft="1.0dip" android:layout_marginRight="1.0dip" android:layout_weight="1.0" />
            <Button android:textAppearance="?textAppearanceMedium" android:textStyle="bold" android:textColor="#ff000000" android:id="@id/password_cancel_button" android:background="@drawable/btn_land_keyguard_background" android:layout_width="0.0sp" android:layout_height="fill_parent" android:layout_marginLeft="1.0dip" android:layout_marginRight="0.0dip" android:text="@string/password_cancel" android:layout_weight="1.0" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>